# Course_project3

./: README.md  funcs.py  main.py  pyproject.toml
tests/: test_funcs.py
